`feat: updated meta tags and added premium features for CliniQ dashboard`

--- a/CliniQ/index.html
+++ b/CliniQ/index.html
@@ -3,20 +3,87 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CliniQ - Connected Health Monitoring</title>
+    <link rel="canonical" href="https://cliniq-health.com" />
+
+    <!-- Primary Meta Tags -->
+    <title>CliniQ - Unified Health Platform</title>
+    <meta name="title" content="CliniQ - Connected Health Monitoring | Real-time Vitals Tracking" />
     <meta
       name="description"
-      content="Monitor health together with consent. Share vitals with family, caregivers, or healthcare providers. Stay connected, stay healthy."
+      content="Advanced health monitoring platform for real-time vitals tracking. Monitor blood pressure, heart rate, temperature, and oxygen levels with premium ECG analysis. Share health data securely with healthcare providers."
     />
     <meta name="author" content="CliniQ Health" />
-    <meta name="keywords" content="health monitoring, vitals, healthcare, remote monitoring, family health" />
+    <meta
+      name="keywords"
+      content="health monitoring, vitals tracking, ECG monitoring, blood pressure monitor, heart rate monitor, oxygen saturation, telemedicine, remote patient monitoring, healthcare technology, medical devices"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
 
-    <meta property="og:title" content="CliniQ - Connected Health Monitoring" />
-    <meta property="og:description" content="Monitor health together with consent. Share vitals with family, caregivers, or healthcare providers." />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cliniq-health.com" />
+    <meta property="og:title" content="CliniQ - Connected Health Monitoring | Real-time Vitals Tracking" />
+    <meta
+      property="og:description"
+      content="Advanced health monitoring platform for real-time vitals tracking. Monitor blood pressure, heart rate, temperature, and oxygen levels with premium ECG analysis."
+    />
+    <meta property="og:image" content="https://cliniq-health.com/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="CliniQ Health" />
+    <meta property="og:locale" content="en_US" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://cliniq-health.com" />
+    <meta name="twitter:title" content="CliniQ - Connected Health Monitoring | Real-time Vitals Tracking" />
+    <meta
+      name="twitter:description"
+      content="Advanced health monitoring platform for real-time vitals tracking. Monitor blood pressure, heart rate, temperature, and oxygen levels with premium ECG analysis."
+    />
+    <meta name="twitter:image" content="https://cliniq-health.com/twitter-image.jpg" />
     <meta name="twitter:site" content="@CliniQHealth" />
+    <meta name="twitter:creator" content="@CliniQHealth" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="theme-color" content="#10b981" />
+    <meta name="msapplication-TileColor" content="#10b981" />
+    <meta name="application-name" content="CliniQ Health" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "CliniQ",
+        "description": "Connected health monitoring platform for real-time vitals tracking with premium ECG analysis",
+        "url": "https://cliniq-health.com",
+        "applicationCategory": "HealthcareApplication",
+        "operatingSystem": "Web Browser",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "creator": {
+          "@type": "Organization",
+          "name": "CliniQ Health",
+          "url": "https://cliniq-health.com"
+        },
+        "featureList": [
+          "Real-time vitals monitoring",
+          "Blood pressure tracking",
+          "Heart rate monitoring",
+          "Temperature measurement",
+          "Oxygen saturation levels",
+          "ECG analysis (Premium)",
+          "Secure data sharing",
+          "Healthcare provider integration"
+        ]
+      }
+    </script>
   </head>
 
   <body>
